--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,13 @@
       <version>4.0.0.RELEASE</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Java Mail -->
+    <!--<dependency>-->
+      <!--<groupId>javax.mail</groupId>-->
+      <!--<artifactId>mail</artifactId>-->
+      <!--<version>1.4.7</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <repositories>
